[gd_scene load_steps=8 format=1]

[ext_resource path="res://scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://art/gui/barHorizontal_green_mid 200.png" type="Texture" id=2]
[ext_resource path="res://fonts/font.tres" type="DynamicFont" id=3]
[ext_resource path="res://fonts/KenVector Future.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFontData" id=1]

font_path = "res://fonts/KenVector Future.ttf"

[sub_resource type="DynamicFont" id=2]

font/size = 48
font/use_mipmaps = false
font/use_filter = false
font/font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 4 )

[node name="HUD" type="CanvasLayer"]

process/pause_mode = 2
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="score" type="Label" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 200.0
margin/top = 300.0
margin/right = -200.0
margin/bottom = 200.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="shield_bar" type="TextureProgress" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 10.0
margin/right = 230.0
margin/bottom = 40.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 75.0
range/exp_edit = false
range/rounded = false
texture/under = null
texture/over = null
texture/progress = ExtResource( 2 )
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )

[node name="message" type="Label" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_fonts/font = ExtResource( 3 )
text = "Message"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="message_timer" type="Timer" parent="."]

process/pause_mode = 1
process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[node name="pause_popup" type="Panel" parent="."]

visibility/visible = false
visibility/self_opacity = 0.5
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="pause_text" type="Label" parent="pause_popup"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_fonts/font = ExtResource( 3 )
text = "PAUSE"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="version" type="Label" parent="pause_popup"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 560.0
margin/right = 0.0
margin/bottom = 0.0
custom_fonts/font = SubResource( 3 )
text = "version:"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="timeout" from="message_timer" to="." method="_on_message_timer_timeout"]


